# ksnip

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  custombluild
ci/debian/: control
ci/rpm/: phonexa-screens.spec
ci/scripts/: bootstrap.sh  build.sh  setup.sh  upload.sh
ci/scripts/deb/: build_deb.sh  setup_build_rules.sh  setup_changelog_file.sh  setup_deb_directory_structure.sh
ci/scripts/rpm/: build_rpm.sh  setup_rpm_directory_structure.sh  setup_spec_file.sh
cmake/modules/: MacOSXBundleInfo.plist.in
desktop/: CMakeLists.txt  com.phonexa.phonexa-screens.appdata.xml  com.phonexa.phonexa-screens.desktop
icons/: ksnip.icns  ksnip_icons.qrc  phonexa_logo_128.icns
innosetup/: phonexascreensetup.iss
src/: CMakeLists.txt  main.cpp
src/backend/: TranslationLoader.cpp
src/backend/config/: KsnipConfig.cpp  KsnipConfig.h  KsnipConfigOptions.cpp  KsnipConfigOptions.h
src/backend/imageGrabber/: AbstractRectAreaImageGrabber.cpp  WinWrapper.cpp
src/backend/uploader/: UploaderProvider.cpp  UploaderProvider.h
src/backend/uploader/ushare/: UshareResponse.cpp  UshareResponse.h  UshareResponseLogger.cpp  UshareResponseLogger.h  UshareUploader.cpp  UshareUploader.h  UshareWrapper.cpp  UshareWrapper.h
src/bootstrapper/: StandAloneBootstrapper.cpp
src/common/constants/: DefaultValues.h
src/common/enum/: UploaderType.h
src/common/platform/: HdpiScaler.cpp  HdpiScaler.mm
src/gui/: CustomInputDialog.cpp  CustomInputDialog.h  MainWindow.cpp  MainWindow.h  UshareHistoryDialog.cpp  UshareHistoryDialog.h
src/gui/captureHandler/: CaptureHandlerFactory.cpp  CaptureTabStateHandler.h  ICaptureHandler.h  MultiCaptureHandler.cpp  MultiCaptureHandler.h  SingleCaptureHandler.cpp  SingleCaptureHandler.h
src/gui/operations/: HandleUploadResultOperation.cpp  HandleUploadResultOperation.h
src/gui/settingsDialog/: SettingsDialog.cpp  SettingsDialog.h  UploaderSettings.cpp  UshareUploaderSettings.cpp  UshareUploaderSettings.h
src/gui/snippingArea/: AbstractSnippingArea.cpp  LinuxSnippingArea.cpp  LinuxSnippingArea.h
src/widgets/: MainToolBar.cpp  MainToolBar.h
